--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "cy:run": "cypress run",
+    "cy:open": "cypress open"
+
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
@@ -68,6 +71,7 @@
   "devDependencies": {
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "cypress": "^13.10.0",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.14"
   }
