--- a/.github/workflows/build-pull-request.yml
+++ b/.github/workflows/build-pull-request.yml
@@ -21,6 +21,16 @@ jobs:
     name: E2E on Chrome
     steps:
       - uses: actions/checkout@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.10.0'
+
+      - name: Install pnpm & deps
+        run: |
+          npm install -g pnpm
+          pnpm install
+
       - uses: cypress-io/github-action@v6
         with:
           start: pnpm dev
