--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "format": "prettier . --write",
     "cy:run": "cypress run",
     "cy:open": "cypress open",
-    "prepare": "husky",
-    "pre-commit": "lint-staged"
+    "prepare": "husky"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
@@ -76,7 +75,6 @@
     "@typescript-eslint/eslint-plugin": "^6.11.0",
     "cypress": "^13.10.0",
     "husky": "^9.0.11",
-    "lint-staged": "^15.2.4",
     "prettier": "3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.14"
   }
